# kalidyasin.github.io

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  input.css  tailwind.config.js
.github/workflows/: build_github_page.yml
public/: content.json
src/: main.rs
