[package]
name = "portfolio-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
gloo-utils = "0.2"
gloo-timers = "0.3"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlElement", "Window", "Document", "Element", "Event", "KeyboardEvent", "InputEvent", "MouseEvent"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
